--- a/configure.in
+++ b/configure.in
@@ -10,7 +10,7 @@ AC_CHECK_LIB(fuse, fuse_main)
 dnl Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h strings.h sys/time.h unistd.h attr/xattr.h)
+AC_CHECK_HEADERS(fcntl.h strings.h sys/time.h unistd.h sys/xattr.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
